--- a/ColumnDesign/App.xaml
+++ b/ColumnDesign/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ColumnDesigner.App"
+﻿<Application x:Class="ColumnDesign.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ColumnDesigner"
+             xmlns:local="clr-namespace:ColumnDesign"
              Startup="App_StartUp">
     <Application.Resources>
          
