--- a/ColumnDesign/AutoGroupDesign.xaml
+++ b/ColumnDesign/AutoGroupDesign.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColumnDesigner.AutoGroupDesign"
+﻿<Window x:Class="ColumnDesign.AutoGroupDesign"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColumnDesigner"
+        xmlns:local="clr-namespace:ColumnDesign"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="Auto Group Design" Height="880" Width="430">
