--- a/ColumnDesign/ClosingWindow.xaml
+++ b/ColumnDesign/ClosingWindow.xaml
@@ -1,14 +1,15 @@
-﻿<Window x:Class="ColumnDesigner.ClosingWindow"
+﻿<Window x:Class="ColumnDesign.ClosingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColumnDesigner"
+        xmlns:local="clr-namespace:ColumnDesign"
         mc:Ignorable="d"
-        Title="ClosingWindow">
+        WindowStyle="ToolWindow"
+        Title="">
     <Grid>
         <Grid>
-            <StackPanel Orientation="Horizontal" Height="30" HorizontalAlignment="Center" Margin="10 10 10 10">
+            <StackPanel Orientation="Horizontal" Height="30" HorizontalAlignment="Center" Margin="15 15 15 15">
                 <Button 
                     Name="Save"
                     Content="Save" 
