--- a/ColumnDesign/ColumnMap.xaml
+++ b/ColumnDesign/ColumnMap.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColumnDesigner.ColumnMap"
+﻿<Window x:Class="ColumnDesign.ColumnMap"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColumnDesigner"
+        xmlns:local="clr-namespace:ColumnDesign"
         xmlns:h="http://helix-toolkit.org/wpf"
         xmlns:local2="clr-namespace:GenericViewer;assembly=GenericViewer"
         mc:Ignorable="d"
