--- a/ColumnDesign/Credits.xaml
+++ b/ColumnDesign/Credits.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="ColumnDesigner.Credits"
+﻿<Window x:Class="ColumnDesign.Credits"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColumnDesigner"
+        xmlns:local="clr-namespace:ColumnDesign"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="About the Column Design app" Height="450" Width="800">
+        Title="About ACE" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -23,7 +23,7 @@
             <Grid Grid.Row="0">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                     <TextBlock>
-                        The Column Design app is fully designed and programmed by MAGMA WORKS
+                        ACE is fully designed and programmed by MAGMA WORKS
                     </TextBlock>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                         <Image
@@ -43,7 +43,7 @@
             <Grid Grid.Row="1">
                 <StackPanel Orientation="Vertical">
                     <TextBlock HorizontalAlignment="Center">
-                    The Column Design app is built using the following great tools and libraries
+                    ACE is built using the following great tools and libraries
                     </TextBlock>
                     <Grid Margin="0 10 0 0">
                         <Grid.ColumnDefinitions>
@@ -142,7 +142,7 @@
 
             <Grid Grid.Row="2" Margin="0 20 0 0">
                 <TextBlock HorizontalAlignment="Center">
-                    Any query, please send us an email at digitaldesign@whitbywood.co.uk
+                    Any query, please send us an email at theteam@magmaworks.uk.com
                 </TextBlock>
             </Grid>
             
