--- a/ColumnDesign/GroupOptimisationResults.xaml
+++ b/ColumnDesign/GroupOptimisationResults.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="ColumnDesigner.GroupOptimisationResults"
+﻿<Window x:Class="ColumnDesign.GroupOptimisationResults"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:local="clr-namespace:ColumnDesigner"
+        xmlns:local="clr-namespace:ColumnDesign"
         mc:Ignorable="d"
         Title="Group Optimisation Results">
     <Grid>
