--- a/ColumnDesign/UCColumnLayout.xaml
+++ b/ColumnDesign/UCColumnLayout.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColumnDesigner.UCColumnLayout"
+﻿<UserControl x:Class="ColumnDesign.UCColumnLayout"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColumnDesigner"
+             xmlns:local="clr-namespace:ColumnDesign"
              xmlns:ox="http://oxyplot.org/wpf"
              mc:Ignorable="d"
              SizeChanged="LayoutSizeChanged">
