--- a/ColumnDesign/UCFireDesign.xaml
+++ b/ColumnDesign/UCFireDesign.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ColumnDesigner.UCFireDesign"
+﻿<UserControl x:Class="ColumnDesign.UCFireDesign"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:ox="http://oxyplot.org/wpf"
-             xmlns:local="clr-namespace:ColumnDesigner"
+             xmlns:local="clr-namespace:ColumnDesign"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
