--- a/ColumnDesign/UCInputsView.xaml
+++ b/ColumnDesign/UCInputsView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColumnDesigner.UCInputsView"
+﻿<UserControl x:Class="ColumnDesign.UCInputsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColumnDesigner"
+             xmlns:local="clr-namespace:ColumnDesign"
              mc:Ignorable="d" >
     <Grid>
         <Grid.ColumnDefinitions>
